# batch-curry

./: README.md  metadata.samples  pyproject.toml
batch_curry/: __main__.py
curry_batch/: __main__.py
