[tool.poetry]
name = "curry-batch"
version = "0.1.0"
description = "Curry a list of commands passed as arguments with a YAML list of argument lists, then output the command stdout as a new YAML list of lists."
authors = ["Ben Skubi <bskubi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
curry-batch = "curry_batch.__main__:curry_batch"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

